--- a/main/main/main.vcxproj
+++ b/main/main/main.vcxproj
@@ -127,19 +127,41 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Antylopa.cpp" />
+    <ClCompile Include="BarszczSosnowskiegp.cpp" />
     <ClCompile Include="Czlowiek.cpp" />
     <ClCompile Include="Funkcje.cpp" />
+    <ClCompile Include="Guarana.cpp" />
+    <ClCompile Include="Lis.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Mlecz.cpp" />
     <ClCompile Include="Organizm.cpp" />
+    <ClCompile Include="Owca.cpp" />
+    <ClCompile Include="Rosliny.cpp" />
     <ClCompile Include="Swiat.cpp" />
+    <ClCompile Include="Trawa.cpp" />
+    <ClCompile Include="WilczeJagody.cpp" />
+    <ClCompile Include="Wilk.cpp" />
+    <ClCompile Include="Zolw.cpp" />
     <ClCompile Include="Zwierze.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Antylopa.h" />
+    <ClInclude Include="BarszczSosnowskiegp.h" />
     <ClInclude Include="Czlowiek.h" />
     <ClInclude Include="Definicje.h" />
     <ClInclude Include="Funkcje.h" />
+    <ClInclude Include="Guarana.h" />
+    <ClInclude Include="Lis.h" />
+    <ClInclude Include="Mlecz.h" />
     <ClInclude Include="Organizm.h" />
+    <ClInclude Include="Owca.h" />
+    <ClInclude Include="Rosliny.h" />
     <ClInclude Include="Swiat.h" />
+    <ClInclude Include="Trawa.h" />
+    <ClInclude Include="WilczeJagody.h" />
+    <ClInclude Include="Wilk.h" />
+    <ClInclude Include="Zolw.h" />
     <ClInclude Include="Zwierze.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
